--- a/webtools/metrics.html
+++ b/webtools/metrics.html
@@ -4,40 +4,34 @@
     <meta charset="UTF-8">
     <style>
       h1 { text-align: center; }
-      #plot { margin: 0 auto; width: 900px; height: 500px; }
+      .graph { margin: 0 auto; width: 900px; height: 500px; }
       #select { text-align: center; }
+      .choices { text-align: center; }
     </style>
     <script src="js/jquery-1.10.2.min.js"></script>
     <script src="js/jquery.flot.js"></script>
     <script>
-function plot(data) {
-  var total_bits = [];
-  var mv_bits = [];
-  var bs_bits = [];
-  var pvq_bits = [];
-  var dc_bits = [];
-  var intra_bits = [];
+function plot(data, measurements, plotElem) {
+  var bits = { "total": [] };
 
   for (var i = 0; i < data.length; i++) {
-    total_bits.push([data[i].frame, data[i].total_bits]);
-    mv_bits.push([data[i].frame, data[i].mv_bits]);
-    bs_bits.push([data[i].frame, data[i].bs_bits]);
-    pvq_bits.push([data[i].frame, data[i].pvq_bits]);
-    dc_bits.push([data[i].frame, data[i].dc_bits]);
-    intra_bits.push([data[i].frame, data[i].intra_bits]);
+    $.each(data[i][measurements], function(key, val) {
+      bits[key] = bits[key] || new Array();
+      bits[key].push([data[i].frame, val]);
+    });
+    bits["total"].push([data[i].frame, data[i].total]);
   }
- 
-  var datasets = {
-    "total": { label: "total bits", data: total_bits, color: 0 },
-    "mv": { label: "motion vector bits", data: mv_bits, color: 1 },
-    "bs": { label: "block switching bits", data: bs_bits, color: 2 },
-    "intra": { label: "Intra modes bits", data: intra_bits, color: 5 },
-    "dc": { label: "DC bits", data: dc_bits, color: 4 },
-    "pvq": { label: "PVQ bits", data: pvq_bits, color: 3 },
-  };
 
-  var choices = $("#choices");
-  choices.empty();
+  var color = 0;
+  var datasets = new Object();
+  $.each(bits, function(key, val) {
+    datasets[key] = { label: key, data: val, color: color };
+    color++;
+  });
+
+  var choices = $("<div>");
+  choices.appendTo(plotElem);
+  choices.addClass("choices");
   $.each(datasets, function(key, val) {
     choices.append("<input type=checkbox name=" + key +
                    " checked id=choice_" + key + ">" +
@@ -46,6 +40,9 @@ function plot(data) {
                    "</label>");
   });
 
+  var graph = $("<div>");
+  graph.appendTo(plotElem);
+  graph.addClass("graph");
   function plot_choices() {
     var data = [];
     choices.find("input:checked").each(function() {
@@ -58,7 +55,7 @@ function plot(data) {
       yaxis: { min: 0 },
       xaxis: { tickDecimals: 0 }
     };
-    $.plot("#plot", data, options);
+    $.plot(graph, data, options);
   }
 
   choices.find("input").on("click", plot_choices);
@@ -73,7 +70,8 @@ $(function() {
     var reader = new FileReader();
     reader.onload = function (e) {
       var data = JSON.parse(e.target.result);
-      plot(data);
+      plot(data, "technique", $("#techniques"));
+      plot(data, "plane", $("#planes"));
     };
     console.log(reader);
     reader.readAsText(file);
@@ -86,11 +84,12 @@ $(function() {
       <h1>Bitrate Metrics</h1>
     </div>
     <div id="select">
-      <input type=file id=filebox>
-      <p id="choices"></p>
+      <input type="file" id="filebox">
     </div>
     <div id="content">
-      <div id="plot"></div>
+      <div id="techniques"></div>
+      <hr>
+      <div id="planes"></div>
     </div>
   </body>
 </html>
